renamed package containing exceptions and created a ExternalException that will return with HTTPStatus.OK and reference an error code from the originating exception